изменены GPIO_Pin обновлён .ini

--- a/App/Ajuster/LIP.ini
+++ b/App/Ajuster/LIP.ini
@@ -6,38 +6,38 @@ ID=00000001 EFI v1.01 17.02.2014 www.intmash.ru
 
 [RAM]
 p1=FLAGS/32bit флаги управления и индикации/TDWORD/x0000/r0000/*/1/4/0/
-p2=flash_error//TBit/x0003/128/r0001.f/0/1/0/
-p3=backup_error//TBit/x0003/64/r0001.e/0/1/0/
-p4=fram_error//TBit/x0003/32/r0001.d/0/1/0/
-p5=fram_bkp_error//TBit/x0003/16/r0001.c/0/1/0/
-p6=DOUT1_FAIL//TBit/x0003/8/r0001.b/0/1/0/
-p7=DOUT2_SHAKE//TBit/x0003/4/r0001.a/0/1/0/
-p8=DOUT3_SIGN//TBit/x0003/2/r0001.9/0/1/0/
-p9=DI1//TBit/x0003/1/r0001.8/0/1/0/
-p10=DI2_BURNING//TBit/x0002/128/r0001.7/0/1/0/
-p11=DI3_STOP//TBit/x0002/64/r0001.6/0/1/0/
-p12=DI4_START//TBit/x0002/32/r0001.5/0/1/0/
-p13=DI5_TERM//TBit/x0002/16/r0001.4/0/1/0/
-p14=SYNCF//TBit/x0002/8/r0001.3/0/1/0/
-p15=MTZ_SH//TBit/x0002/4/r0001.2/0/1/0/
-p16=MTZ_L//TBit/x0002/2/r0001.1/0/1/0/
-p17=SHC//TBit/x0002/1/r0001.0/0/1/0/
-p18=OPC//TBit/x0001/128/r0000.f/0/1/0/
-p19=OVH//TBit/x0001/64/r0000.e/0/1/0/
-p20=THFOC//TBit/x0001/32/r0000.d/0/1/0/
-p21=THFAO//TBit/x0001/16/r0000.c/0/1/0/
-p22=FQS//TBit/x0001/8/r0000.b/0/1/0/
-p23=TR_ENABLE//TBit/x0001/4/r0000.a/0/1/0/
-p24=TR1//TBit/x0001/2/r0000.9/0/1/0/
-p25=TR2//TBit/x0001/1/r0000.8/0/1/0/
-p26=SPARK//TBit/x0000/128/r0000.7/0/1/0/
-p27=WAIT//TBit/x0000/64/r0000.6/0/1/0/
-p28=A_STOP//TBit/x0000/32/r0000.5/0/1/0/
-p29=DOUT4_SHAKE2//TBit/x0000/16/r0000.4/0/1/0/
-p30=DOUT5//TBit/x0000/8/r0000.3/0/1/0/
-p31=DOUT6//TBit/x0000/4/r0000.2/0/1/0/
-p32=DI6//TBit/x0000/2/r0000.1/0/1/0/
-p33=NA8//TBit/x0000/1/r0000.0/0/1/0/
+p2=flash_error//TBit/x0000/1/r0000.0/0/1/0/
+p3=backup_error//TBit/x0000/2/r0000.1/0/1/0/
+p4=fram_error//TBit/x0000/4/r0000.2/0/1/0/
+p5=fram_bkp_error//TBit/x0000/8/r0000.3/0/1/0/
+p6=DOUT1_FAIL//TBit/x0000/16/r0000.4/0/1/0/
+p7=DOUT2_SHAKE://TBit/x0000/32/r0000.5/0/1/0/
+p8=DOUT3_SIGN//TBit/x0000/64/r0000.6/0/1/0/
+p9=DI1//TBit/x0000/128/r0000.7/0/1/0/
+p10=DI2_BURNING//TBit/x0001/1/r0000.8/0/1/0/
+p11=DI3_STOP//TBit/x0001/2/r0000.9/0/1/0/
+p12=DI4_START//TBit/x0001/4/r0000.a/0/1/0/
+p13=DI5_TERM//TBit/x0001/8/r0000.b/0/1/0/
+p14=SYNCF//TBit/x0001/16/r0000.c/0/1/0/
+p15=MTZ_SH//TBit/x0001/32/r0000.d/0/1/0/
+p16=MTZ_L//TBit/x0001/64/r0000.e/0/1/0/
+p17=SHC//TBit/x0001/128/r0000.f/0/1/0/
+p18=OPC//TBit/x0002/1/r0001.0/0/1/0/
+p19=OVH//TBit/x0002/2/r0001.1/0/1/0/
+p20=THFOC//TBit/x0002/4/r0001.2/0/1/0/
+p21=THFAO//TBit/x0002/8/r0001.3/0/1/0/
+p22=FQS//TBit/x0002/16/r0001.4/0/1/0/
+p23=TR_ENABLE//TBit/x0002/32/r0001.5/0/1/0/
+p24=TR1//TBit/x0002/64/r0001.6/0/1/0/
+p25=TR2//TBit/x0002/128/r0001.7/0/1/0/
+p26=SPARK//TBit/x0003/1/r0001.8/0/1/0/
+p27=WAIT//TBit/x0003/2/r0001.9/0/1/0/
+p28=A_STOP//TBit/x0003/4/r0001.a/0/1/0/
+p29=DOUT4_SHAKE2//TBit/x0003/8/r0001.b/0/1/0/
+p30=DOUT5//TBit/x0003/16/r0001.c/0/1/0/
+p31=DOUT6//TBit/x0003/32/r0001.d/0/1/0/
+p32=DI6//TBit/x0003/64/r0001.e/0/1/0/
+p33=NA8//TBit/x0003/128/r0001.f/0/1/0/
 ;// Секция задания
 p34=Iz//TWORD/x0004/r0002/*/1/2/0/
 p35=Uz//TWORD/x0006/r0003/*/1/2/0/
