--- a/App/Ajuster/LIP.ini
+++ b/App/Ajuster/LIP.ini
@@ -2,7 +2,7 @@
 LastDateTime=15.05.2014
 Location=LIP
 Description=
-ID=00000001 EFI v1.01 17.02.2014 www.intmash.ru
+ID=00000001 LIP v1.0.0 15.01.2024 www.intmash.ru
 
 [RAM]
 p1=FLAGS/32bit флаги управления и индикации/TDWORD/x0000/r0000/*/1/4/0/
