изменена RAM_DATA изменены .ini файлы

--- a/App/Ajuster/LIP.ini
+++ b/App/Ajuster/LIP.ini
@@ -5,73 +5,72 @@ Description=
 ID=00000001 LIP v1.0.0 15.01.2024 www.intmash.ru
 
 [RAM]
-p1=FLAGS/32bit флаги управлени€ и индикации/TDWORD/x0000/r0000/*/1/4/0/
-p2=flash_error//TBit/x0000/1/r0000.0/0/1/0/
-p3=backup_error//TBit/x0000/2/r0000.1/0/1/0/
-p4=fram_error//TBit/x0000/4/r0000.2/0/1/0/
-p5=fram_bkp_error//TBit/x0000/8/r0000.3/0/1/0/
-p6=DOUT1_FAIL//TBit/x0000/16/r0000.4/0/1/0/
-p7=DOUT2_SHAKE://TBit/x0000/32/r0000.5/0/1/0/
-p8=DOUT3_SIGN//TBit/x0000/64/r0000.6/0/1/0/
-p9=DI1//TBit/x0000/128/r0000.7/0/1/0/
-p10=DI2_BURNING//TBit/x0001/1/r0000.8/0/1/0/
-p11=DI3_STOP//TBit/x0001/2/r0000.9/0/1/0/
-p12=DI4_START//TBit/x0001/4/r0000.a/0/1/0/
-p13=DI5_TERM//TBit/x0001/8/r0000.b/0/1/0/
-p14=SYNCF//TBit/x0001/16/r0000.c/0/1/0/
-p15=MTZ_SH//TBit/x0001/32/r0000.d/0/1/0/
-p16=MTZ_L//TBit/x0001/64/r0000.e/0/1/0/
-p17=SHC//TBit/x0001/128/r0000.f/0/1/0/
-p18=OPC//TBit/x0002/1/r0001.0/0/1/0/
-p19=OVH//TBit/x0002/2/r0001.1/0/1/0/
-p20=THFOC//TBit/x0002/4/r0001.2/0/1/0/
-p21=THFAO//TBit/x0002/8/r0001.3/0/1/0/
-p22=FQS//TBit/x0002/16/r0001.4/0/1/0/
-p23=TR_ENABLE//TBit/x0002/32/r0001.5/0/1/0/
-p24=TR1//TBit/x0002/64/r0001.6/0/1/0/
-p25=TR2//TBit/x0002/128/r0001.7/0/1/0/
-p26=SPARK//TBit/x0003/1/r0001.8/0/1/0/
-p27=WAIT//TBit/x0003/2/r0001.9/0/1/0/
-p28=A_STOP//TBit/x0003/4/r0001.a/0/1/0/
-p29=DOUT4_SHAKE2//TBit/x0003/8/r0001.b/0/1/0/
-p30=DOUT5//TBit/x0003/16/r0001.c/0/1/0/
-p31=DOUT6//TBit/x0003/32/r0001.d/0/1/0/
-p32=DI6//TBit/x0003/64/r0001.e/0/1/0/
-p33=NA8//TBit/x0003/128/r0001.f/0/1/0/
-;// —екци€ задани€
-p34=Iz//TWORD/x0004/r0002/*/1/2/0/
-p35=Uz//TWORD/x0006/r0003/*/1/2/0/
-p36=Az//TWORD/x0008/r0004/*/1/2/0/
-;// —екци€ регулировани€
-p37=A/ угол управлени€ тиристорами, врем€, сколько держать уровень в 0/TWORD/x000a/r0005/*/1/2/0/
-;// —екци€ мнгновенного измерени€ дл€ отладки
-p38=V_Ref/внутренний референс/TWORD/x000c/r0006/*/1/2/0/
-p39=_Iload/non filtred ток нагрузки II/TWORD/x000e/r0007/*/1/2/0/
-p40=_Uload/non filtred напр€жение нагрузки/TWORD/x0010/r0008/*/1/2/0/
-p41=_Ish/non filtred ток нагрузки I/TWORD/x0012/r0009/*/1/2/0/
-;// —екци€ калиброванного измерени€
-p42=Iload/ток нагрузки/TWORD/x0014/r000a/*/1/2/0/
-p43=Uload/напр€жение нагрузки/TWORD/x0016/r000b/*/1/2/0/
-p44=Ish//TWORD/x0018/r000c/*/1/2/0/
-;// —екци€ измерени€ за период
-p45=Iload_avg//TWORD/x001a/r000d/*/1/2/0/
-p46=Uload_avg//TWORD/x001c/r000e/*/1/2/0/
-p47=Ish_avg//TWORD/x001e/r000f/*/1/2/0/
-;//добавить по искре
-p48=Spark_cnt//TWORD/x0020/r0010/*/1/2/0/
-;// переменные защита от дурака - измен€ть значени€ нельз€, но если вдруг кто захочет - 
-p49=A_idiot//TWORD/x0022/r0011/*/1/2/0/
-p50=Iload_idiot//TWORD/x0024/r0012/*/1/2/0/
-p51=Uload_idiot//TWORD/x0026/r0013/*/1/2/0/
-p52=Ish_idiot//TWORD/x0028/r0014/*/1/2/0/
-;/*только дл€ настройки*/
-p53=Spark_cnt_view//TWORD/x002a/r0015/*/1/2/0/
-p54=Il_buffer//TWORD/x002c/r0016/*/1/2/0/
-p55=Ul_buffer//TWORD/x002e/r0017/*/1/2/0/
-p56=load_buf//TWORD/x0030/r0018/*/1/2/0/
-;//переменные дл€ усреднени€ на дисплее - чтобы проще было смотреть
-p57=Iload_Efiltr//TWORD/x0032/r0019/*/1/2/0/
-p58=Uload_Efiltr//TWORD/x0034/r001a/*/1/2/0/
+;p1=FLAGS/32bit флаги управлени€ и индикации/TDWORD/x0000/r0000/*/1/4/0/
+;p2=flash_error//TBit/x0000/1/r0000.0/0/1/0/
+;p3=backup_error//TBit/x0000/2/r0000.1/0/1/0/
+;p4=fram_error//TBit/x0000/4/r0000.2/0/1/0/
+;p5=fram_bkp_error//TBit/x0000/8/r0000.3/0/1/0/
+;p6=DOUT1_FAIL//TBit/x0000/16/r0000.4/0/1/0/
+;p7=DOUT2_SHAKE://TBit/x0000/32/r0000.5/0/1/0/
+;p8=DOUT3_SIGN//TBit/x0000/64/r0000.6/0/1/0/
+;p9=DI1//TBit/x0000/128/r0000.7/0/1/0/
+;p10=DI2_BURNING//TBit/x0001/1/r0000.8/0/1/0/
+;p11=DI3_STOP//TBit/x0001/2/r0000.9/0/1/0/
+;p12=DI4_START//TBit/x0001/4/r0000.a/0/1/0/
+;p13=DI5_TERM//TBit/x0001/8/r0000.b/0/1/0/
+;p14=SYNCF//TBit/x0001/16/r0000.c/0/1/0/
+;p15=MTZ_SH//TBit/x0001/32/r0000.d/0/1/0/
+;p16=MTZ_L//TBit/x0001/64/r0000.e/0/1/0/
+;p17=SHC//TBit/x0001/128/r0000.f/0/1/0/
+;p18=OPC//TBit/x0002/1/r0001.0/0/1/0/
+;p19=OVH//TBit/x0002/2/r0001.1/0/1/0/
+;p20=THFOC//TBit/x0002/4/r0001.2/0/1/0/
+;p21=THFAO//TBit/x0002/8/r0001.3/0/1/0/
+;p22=FQS//TBit/x0002/16/r0001.4/0/1/0/
+;p23=TR_ENABLE//TBit/x0002/32/r0001.5/0/1/0/
+;p24=TR1//TBit/x0002/64/r0001.6/0/1/0/
+;p25=TR2//TBit/x0002/128/r0001.7/0/1/0/
+;p26=SPARK//TBit/x0003/1/r0001.8/0/1/0/
+;p27=WAIT//TBit/x0003/2/r0001.9/0/1/0/
+;p28=A_STOP//TBit/x0003/4/r0001.a/0/1/0/
+;p29=DOUT4_SHAKE2//TBit/x0003/8/r0001.b/0/1/0/
+;p30=DOUT5//TBit/x0003/16/r0001.c/0/1/0/
+;p31=DOUT6//TBit/x0003/32/r0001.d/0/1/0/
+;p32=DI6//TBit/x0003/64/r0001.e/0/1/0/
+;p33=NA8//TBit/x0003/128/r0001.f/0/1/0/
+
+p1=UsedMem/используема€ пам€ть/TDWORD/x0000/r0000/*/1/4/0/
+p2=TotalMem/обща€ пам€ть/TDWORD/x0004/r0002/*/1/4/0/
+p3=arena//TDWORD/x0008/r0004/*/1/4/0/
+p4=totalFreeSpace//TDWORD/x000c/r0006/*/1/4/0/
+;//данные 32 бит
+p5=data32_0//TDWORD/x0010/r0008/*/1/4/0/
+p6=data32_1//TDWORD/x0014/r000a/*/1/4/0/
+p7=data32_2//TDWORD/x0018/r000c/*/1/4/0/
+p8=data32_3//TDWORD/x001c/r000e/*/1/4/0/
+p9=data32_4//TDWORD/x0020/r0010/*/1/4/0/
+p10=data32_5//TDWORD/x0024/r0012/*/1/4/0/
+p11=data32_6//TDWORD/x0028/r0014/*/1/4/0/
+p12=data32_7//TDWORD/x002c/r0016/*/1/4/0/
+;//данные 16 бит
+p13=data_0//TWORD/x0030/r0018/*/1/2/0/
+p14=data_1//TWORD/x0032/r0019/*/1/2/0/
+p15=data_2//TWORD/x0034/r001a/*/1/2/0/
+p16=data_3//TWORD/x0036/r001b/*/1/2/0/
+p17=data_4//TWORD/x0038/r001c/*/1/2/0/
+p18=data_5//TWORD/x003a/r001d/*/1/2/0/
+p19=data_6//TWORD/x003c/r001e/*/1/2/0/
+p20=data_7//TWORD/x003e/r001f/*/1/2/0/
+;//счЄтчики
+p21=counter_0//TWORD/x0040/r0020/*/1/2/0/
+p22=counter_1//TWORD/x0042/r0021/*/1/2/0/
+p23=counter_2//TWORD/x0044/r0022/*/1/2/0/
+p24=counter_3//TWORD/x0046/r0023/*/1/2/0/
+p25=counter_4//TWORD/x0048/r0024/*/1/2/0/
+p26=counter_5//TWORD/x004a/r0025/*/1/2/0/
+p27=counter_6//TWORD/x004c/r0026/*/1/2/0/
+p28=counter_7//TWORD/x004e/r0027/*/1/2/0/
+p29=DI//TWORD/x0050/r0028/*/1/2/0/
 
 
 [XRAM]
